add link to GitHub repo

--- a/index.html
+++ b/index.html
@@ -20,5 +20,8 @@
 			<p class="description">Prone to depression. Likes The Dropkick Murphies</p>
 		</div>
 	</div>
+	<footer>
+		<a href="https://chawk073uofc.github.io/animal-trading-cards/">See code on GitHub</a>
+	</footer>
 </body>
 </html>
