--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</div>
 	</div>
 	<footer>
-		<a href="https://chawk073uofc.github.io/animal-trading-cards/">See code on GitHub</a>
+		<a href="https://github.com/chawk073uofc/animal-trading-cards">See code on GitHub</a>
 	</footer>
 </body>
 </html>
